[package]
name = "sui-simulator"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack.workspace = true
sui-framework = { path = "../sui-framework" }
sui-types = { path = "../sui-types" }
telemetry-subscribers.workspace = true
tracing = "0.1"
anemo.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }

[target.'cfg(msim)'.dependencies]
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "70e580edaaf4141dc7e1873690190b7ca56cf1de", package = "msim" }
